--- a/src/component/dashboard/dashboard.module.css
+++ b/src/component/dashboard/dashboard.module.css
@@ -1,4 +1,16 @@
 .dashboard {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1rem;
+  border-top: 1px solid black;
+}
+
+@media screen and (min-width: 560px) {
+  .dashboard {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
 }
