--- a/src/component/expense/expense-list.module.css
+++ b/src/component/expense/expense-list.module.css
@@ -1,9 +1,8 @@
 .expense-container {
-  width: 100%;
-  margin-right: 2rem;
-  margin-top: 2rem;
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
-  height: 500px;
+  width: 100%;
+  gap: 0.3rem;
+  justify-content: center;
 }
