--- a/src/component/expense/expense.module.css
+++ b/src/component/expense/expense.module.css
@@ -1,11 +1,11 @@
 .expense {
   border: 1px solid black;
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 0.3rem;
   border-radius: 0.4rem;
+  width: 95%;
 }
 
 .expense-date {
