--- a/src/component/UI/Loader.module.css
+++ b/src/component/UI/Loader.module.css
@@ -2,9 +2,13 @@
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 40px;
+    height: 40px;
     animation: spin 2s linear infinite;
+    margin:auto;
+    top: 50%;
+    left: 50%;
+    position: fixed;
   }
   
   @keyframes spin {
