--- a/src/component/expense-account/expense-account-form.module.css
+++ b/src/component/expense-account/expense-account-form.module.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.1rem;
-    width: 100%;
+    width: 80%;
     border: 1px solid black;
     padding: 0.4rem;
     height: calc(100% -30vh);
-    margin-top: 0.2rem;
+    margin:auto;
+    margin-top:0.2rem;
     border-radius: 0.3rem;
   }
   
