--- a/src/component/authentication/Register.module.css
+++ b/src/component/authentication/Register.module.css
@@ -1,3 +1,24 @@
+.register{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1rem;
+  flex-direction: column;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  width: 100%;
+}
+
+.verify-text {
+  display: inline;
+  width: 300px;
+  color: gray;
+  justify-content: space-evenly;
+  font-size: .7rem;
+}
+
 .form {
   display: flex;
   flex-direction: column;
