--- a/src/component/Header.module.css
+++ b/src/component/Header.module.css
@@ -1,8 +1,8 @@
-nav {
+.nav {
   --tw-bg-opacity: 1;
   background-color: rgba(16, 163, 127, var(--tw-bg-opacity));
   width: 100%;
-  padding: 10px 10%;
+  /* padding: 10px 10%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
